# revit-bim-project

./: .dockerignore  .env.example  .gitignore  .tmp_langchain_eval.txt  Dockerfile  README.md  docker-compose.yml  pyproject.toml  requirements.txt
app/: agent_dashboard.py  dashboard.py
docs/bim_rules/: bim_room_quality_rules.md
eval/: bim_agent_eval.json
revit-addin/RevitRoomExporter/: ExportRoomsCommand.cs  RevitRoomExporter.csproj  RevitRoomExporter.sln
revit_exporter/: .gitignore
revit_exporter/RoomExporter/: RoomExporter.slnx
scripts/: evaluate_langchain_agent.py  evaluate_langgraph_agent.py  run_analytics.py  run_anomaly_detection.py  run_ingestion.py  test_agent.py  test_ai_tools.py  test_bim_report.py  test_embedding_rag.py  test_langchain_agent.py  test_langgraph_agent.py  test_openai_agent.py  test_openai_tool_agent.py  test_openai_tool_agent_debug.py
scripts/eval/: evaluate_langchain_agent.py  evaluate_langgraph_agent.py  evaluate_openai_tool_agent.py
scripts/pipeline/: build_bim_rules_vectorstore.py  run_anomaly_detection.py  run_pipeline.py
scripts/tests/: test_agent.py  test_bim_report.py  test_embedding_rag.py  test_langchain_agent.py  test_langgraph_agent.py  test_openai_agent.py  test_openai_tool_agent.py  test_openai_tool_agent_debug.py
src/ingestion/: load_revit_api_export.py  load_rooms.py
src/revit_bim_project.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
src/storage/: load_processed.py  save_rooms.py
src/transformation/: clean_rooms.py  (+1 more)
tests/: test_anomaly_detection.py  test_rag.py  test_tools.py
(+32 files in other folders)
